--- a/Stats-preview-card-component/style.css
+++ b/Stats-preview-card-component/style.css
@@ -10,6 +10,7 @@
 body {
 	background-color: var(--main-background);
 	font-family: Inter, sans-serif;
+	box-sizing: border-box;
 }
 
 h1 {
@@ -23,14 +24,36 @@ p {
 
 .container {
 	margin: 10rem 20% auto;
+	border-radius: 10px;
 	display: flex;
 	background-color: var(--card-background);
 	justify-content: center;
 }
 
 .card {
-	margin: 3rem;
+	margin: 2rem;
 	flex: 1;
+}
+
+.pic {
+	background-image: url('./images/image-header-desktop.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	flex: 1;
+	position: relative;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.pic::after {
+	content: "";
+	background-color: var(--accent);
+	opacity: .5;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .context {
@@ -48,6 +71,8 @@ p {
 
 .stats {
 	padding: 0 1rem;
+	color: var(--stat-headings);
+	text-transform: uppercase;
 }
 
 .num {
@@ -55,30 +80,30 @@ p {
 	font-family: 'Lexend Deca', sans-serif;
 }
 
-.pic
-{
-    background: url('./images/image-header-desktop.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* width: 540px; */
-    flex:1;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    position: relative;
+.num2 {
+	text-transform: lowercase;
 }
 
-.pic::after
-{
-    content: ' ';
-    width: 100%;
-    height: 100%;
-    background-color: var(--accent);
-    opacity: .5;
-    position: absolute;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius:pic;
-    position: absolute;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+@media screen and (max-width:1000px) {
+	.container {
+		flex-direction: column-reverse;
+		text-align: center;
+		margin: 3rem 10% auto;
+	}
+	.pic {
+		min-width: 100%;
+		min-height: 350px;
+		background-size: cover;
+		background-repeat: no-repeat;
+		position: relative;
+		border-radius: 10px 10px 0 0;
+	}
+	.pic::after {
+		right: 0;
+		border-radius: 10px 10px 0 0;
+	}
+	.stats-container {
+		flex-direction: column;
+		text-align: center;
+	}
 }
-
